fix: update storybook options

--- a/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
+++ b/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
@@ -22,6 +22,8 @@ import { Markdown } from "@storybook/blocks";
 | codeIcon           | boolean                        | true             | Shows the country code icon in the dropdown.                                |
 | fillAddonBorderColor | string                        |                 | Border color for the addon component.                                       |
 | codeLabel          | string                          |                 | Custom label for the country code dropdown.                                 |
+| label              | string                          |                 | Label for the input element.                                 |
+| textAlignment      | "left", "center"                | "left"          | Input value alignment                                 |
 | countryCodes       | TCountryCodes[]                 |                 | List of country codes available in the dropdown.                            |
 | shortCode          | string                          |                 | Default country short code to be selected in the dropdown.                  |
 | onCodeChange       | (item: TCountryCodes) => void   |                 | Callback function called when the country code changes.                     |
