--- a/lib/changelog.mdx
+++ b/lib/changelog.mdx
@@ -1,9 +1,8 @@
 import { Meta, Markdown } from "@storybook/blocks";
-
-import Readme from "../CHANGELOG.md?raw";
+import Changelog from "../CHANGELOG.md?raw";
 
 <Meta title="Changelog" />
 
 # Changelog
 
-<Markdown>{Readme}</Markdown>
+<Markdown>{Changelog}</Markdown>
