chore: update docs

--- a/lib/components/Navigation/bottom-navigation/documentation.mdx
+++ b/lib/components/Navigation/bottom-navigation/documentation.mdx
@@ -5,7 +5,7 @@ import { Markdown } from "@storybook/blocks";
  
 <Meta name="Documentation" of={BottomNavigationStories} />
  
-# Bottom Navigation Bar
+# Bottom Navigation
 
 This component showcases how to use the `Navigation.Bottom` from the `@deriv-com/quill-ui` library. The `Navigation.Bottom` dynamically updates the displayed content based on the selected index, which is determined by user interaction.
 
