--- a/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
+++ b/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
@@ -32,6 +32,8 @@ import { Markdown } from "@storybook/blocks";
 | inputSize            | "sm", "md" ,"lg"                               | "lg"                       | Sets the size of the input field.                                                         |
 | variant              | "outline" ,"fill"                              | "outline"                  | Sets the variant style of the input.                                                      |
 | status               | "neutral" ,"error" ,"success"                  | "neutral"                  | Sets the status style of the input.                                                       |
+| placeholder          | string                                         |                            | Placeholder text for the input field.                                                     |
+| formatProps          | object                                         |                            | Props for formatting the input value.                                                     |
 | value                | string                                         |                            | The current value of the input field.                                                     |
 | disabled             | boolean                                        | false                      | Disables the input field.                                                                 |
 | onChange             | (event: ChangeEvent<HTMLInputElement>) => void |                            | Callback function for handling input changes.                                             |
