Suisin/fix: make InputPhoneNumber not following any format in default (#494)
* fix: make InputPhoneNumber not following any format in default

* chore: add inputmode for InputPhoneNumber component

* chore: remove check for formatProps.format in base

* chore: remove default in read me files

* chore: remove values in cell

--- a/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
+++ b/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
@@ -32,8 +32,8 @@ import { Markdown } from "@storybook/blocks";
 | inputSize            | "sm", "md" ,"lg"                               | "lg"                       | Sets the size of the input field.                                                         |
 | variant              | "outline" ,"fill"                              | "outline"                  | Sets the variant style of the input.                                                      |
 | status               | "neutral" ,"error" ,"success"                  | "neutral"                  | Sets the status style of the input.                                                       |
-| placeholder          | string                                         | "00 0000 0000"             | Placeholder text for the input field.                                                     |
-| formatProps          | object                                         | { format: "## #### ####" } | Props for formatting the input value.                                                     |
+| placeholder          | string                                         |                            | Placeholder text for the input field.                                                     |
+| formatProps          | object                                         |                            | Props for formatting the input value.                                                     |
 | value                | string                                         |                            | The current value of the input field.                                                     |
 | disabled             | boolean                                        | false                      | Disables the input field.                                                                 |
 | onChange             | (event: ChangeEvent<HTMLInputElement>) => void |                            | Callback function for handling input changes.                                             |
