chore: make search box optional in Input Phone Number field

--- a/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
+++ b/lib/components/Input/input-phone-number/input-phone-number-docs.mdx
@@ -29,6 +29,7 @@ import { Markdown } from "@storybook/blocks";
 | onCodeChange         | (item: TCountryCodes) => void                  |                            | Callback function called when the country code changes.                                   |
 | onValueChange        | (phoneNumber: string) => void                  |                            | Callback function called input or code values changed and returns phone number with code. |
 | showFlags            | boolean                                        | true                       | Determines if flags should be displayed in the dropdown.                                  |
+| showSearchBar        | boolean                                        | false                      | Determines if search bar should be displayed in the dropdown.                             |
 | inputSize            | "sm", "md" ,"lg"                               | "lg"                       | Sets the size of the input field.                                                         |
 | variant              | "outline" ,"fill"                              | "outline"                  | Sets the variant style of the input.                                                      |
 | status               | "neutral" ,"error" ,"success"                  | "neutral"                  | Sets the status style of the input.                                                       |
